--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
 # ===============================================================================================
+# Ignore list for general files 
+# ===============================================================================================
+*.pdf
+
+## MacOS
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+
+## Windows
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# ===============================================================================================
 # Ignore list for Eagle, a PCB layout tool
 # ===============================================================================================
 
