--- a/.github/workflows/mincicd.yml
+++ b/.github/workflows/mincicd.yml
@@ -40,4 +40,4 @@ jobs:
         id: documents
         uses: Analog-inc/asciidoctor-action@master
         with:
-          shellcommand: "asciidoctor-pdf -o documents/inbdex.pdf index.adoc"
+          shellcommand: "asciidoctor-pdf -o inbdex.pdf index.adoc"
